added routing so everyone can work on their component

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -9,16 +9,16 @@
   <div class="nav navbar-collapse collapse w-100 order-3 dual-collapse2">
     <ul class="nav navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Почетна</a>
+        <a  routerLink="/home" class="nav-link" href="#">Почетна</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Детектирај</a>
+        <a routerLink="/detect" class="nav-link" href="#">Детектирај</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Херој</a>
+        <a routerLink="/heroes" class="nav-link" href="#">Херој</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-dark" href="#">Настани</a>
+        <a routerLink="events" class="btn btn-dark" href="#">Настани</a>
       </li>
       <li class="nav-item">
           <app-modal-basic></app-modal-basic>
