added fontawesome and map component is taking full viewport of the browser

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav></app-nav>
-<router-outlet></router-outlet>
+<app-nav class="navbar-custom"></app-nav>
+<div  id="pageContainer">
+  <router-outlet   ></router-outlet>
+</div>
+
 
 
