--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,12 @@
-app-map {
-  height: 100%;
-  width: auto;
-}
+#pageContainer{
+  margin: 5.1% 0 0;
+  left: 0;
+  right: 0;
+  background: yellow;
 
+}
+.navbar-custom{
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
