--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,19 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 body {
-  height: 400px;
-  width: auto;
-  background-color: aqua;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
+  align-items: stretch;
+  height: 100vh;
 }
 
 app-root {
-  height: 100%;
-  width: auto;
+  order: 0;
+  flex: 1 1 auto;
+  align-self: auto;
+  display: block;
+  background: red;
 }
