edit of map component

--- a/src/app/components/info-side/info-side.component.html
+++ b/src/app/components/info-side/info-side.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-body">
+  <div class="card-body m-0">
     <div class="row">
       <div class="col blockquote">
         <h3>Визија</h3>
@@ -51,5 +51,12 @@
       </div>
     </div>
 
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="btn btn-danger text-light p-3">
+        Додај Проблем
+      </div>
+    </div>
   </div>
 </div>
