--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -18,7 +18,7 @@
         <a routerLink="/heroes" class="nav-link" href="#">Херој</a>
       </li>
       <li class="nav-item">
-        <a routerLink="events" class="btn btn-dark" href="#">Настани</a>
+        <a routerLink="/events" class="btn btn-dark" href="#">Настани</a>
       </li>
       <li class="nav-item">
           <app-modal-basic></app-modal-basic>
