Change the Info-Side

--- a/src/app/components/info-side/info-side.component.html
+++ b/src/app/components/info-side/info-side.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col blockquote">
         <h3>Визија</h3>
-        "to detect and solve a problem,by raising the humanity in every person"
+        <p>"to detect and solve a problem,by raising the humanity in every person"</p>
       </div>
 
     </div>
@@ -11,32 +11,29 @@
       <div class="col">
         <h3>Што можеш да направиш?</h3>
         <div class="row">
-          <div class="col-4">
-            <div class="card border-0">
-              <div class="card-body bg-info rounded-circle align-items-center">
-                <fa-icon [icon]="faCoffee" class="text-light align-items-center ">
-
-                </fa-icon>
+          <div class="col-4 items-problems">
+              <div class="bg-info icons">
+                <img src="../../../assets/Icons/Pin-Problem.png">
               </div>
+              <h6>
+                Пријави проблем
+              </h6>
+          </div>
+          <div class="col-4 items-problems">
+            <div class="bg-info icons">
+              <img src="../../../assets/Icons/checked.png" class="checked-icon">
             </div>
+            <h6>
+              Реши проблем
+            </h6>
           </div>
           <div class="col-4">
-            <div class="card border-0">
-              <div class="card-body bg-info rounded-circle align-items-center">
-                <fa-icon [icon]="faCoffee" class="text-light align-items-center ">
-
-                </fa-icon>
-              </div>
+            <div class="bg-info icons">
+              <img src="../../../assets/Icons/calendar.png">
             </div>
-          </div>
-          <div class="col-4">
-            <div class="card border-0">
-              <div class="card-body bg-info rounded-circle align-items-center">
-                <fa-icon [icon]="faCoffee" class="text-light align-items-center ">
-
-                </fa-icon>
-              </div>
-            </div>
+            <h6>
+              Креирај настан
+            </h6>
           </div>
         </div>
       </div>
@@ -46,17 +43,16 @@
     <div class="row">
       <div class="col blockquote">
         <h3>Зошто да бидеш дел од оваа платформа ?</h3>
-
-        "to detect and solve a problem,by raising the humanity in every person"
+        <p>"to detect and solve a problem,by raising the humanity in every person"</p>
       </div>
     </div>
-
-  </div>
-  <div class="row">
-    <div class="col">
-      <div class="btn btn-danger text-light p-3">
-        Додај Проблем
+    <div class="row">
+      <div class="col button-problem">
+        <div class="btn btn-danger text-light p-3 shadow">
+          Додај Проблем
+        </div>
       </div>
     </div>
   </div>
 </div>
+
