--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,23 @@
 #pageContainer{
-  margin: 5.1% 0 0;
+  margin: 3% 0 0;
   left: 0;
   right: 0;
-  background: yellow;
 
 }
 .navbar-custom{
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+}
+
+@media screen and (max-width: 600px){
+  #pageContainer{
+    margin: 8% 0 0;
+  }
+}
+
+@media screen and (max-width: 1100px){
+  #pageContainer{
+    margin: 5% 0 0;
+  }
 }
