--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,8 +1,15 @@
 <div class="container-fluid ">
 
   <div class="row " >
-    <div id="containerForInfoAndForm" class="col-3 ">
-      <app-info-side></app-info-side>
+    <div  *ngIf="isActive" id="containerForInfoAndForm" class="col-3 ">
+      <app-info-side ></app-info-side>
+
+
+    </div>
+    <div  *ngIf="!isActive" class="containerForInfoAndForm col-3 ">
+
+      <app-problemform></app-problemform>
+
     </div>
     <div id="containerForMap" class="col-9 " >
       <agm-map id="mapItSelf" [(latitude)]="location.lat" [(longitude)]="location.lng"
