added info-component and mapEvent

--- a/src/app/components/problemform/problemform.component.html
+++ b/src/app/components/problemform/problemform.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <input class="card-body">
+    <div class="card-body">
     <div class="form-group">
 
 
@@ -17,7 +17,7 @@
         <input type="text" id="locationMarker">
         <label for="listOfItems">Листа на потребни работи(ставките одделете ги со запирка)</label>
         <input type="text" id="listOfItems">
-        <label for="privateInfo">Дали се согласувате Вашите внесени податоци, да бидат објавени</label>
-      <input type="checkbox"id="privateInfo">
-
+        <label for="privateInfo"><input type="checkbox"id="privateInfo">Дали се согласувате Вашите внесени податоци, да бидат објавени</label>
+        <button class="btn btn-success"> Зачувај </button>
+    </div>
 </div>
