--- a/src/app/components/info-side/info-side.component.html
+++ b/src/app/components/info-side/info-side.component.html
@@ -48,7 +48,7 @@
     </div>
     <div class="row">
       <div class="col button-problem">
-        <div class="btn btn-danger text-light p-3 shadow">
+        <div class="btn btn-danger text-light p-3 shadow" (click)="someEvent.emit(true)">
           Додај Проблем
         </div>
       </div>
