--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -2,13 +2,13 @@
 
   <div class="row " >
     <div  *ngIf="isActive" id="containerForInfoAndForm" class="col-3 ">
-      <app-info-side ></app-info-side>
+      <app-info-side (someEvent)="onClick()"  ></app-info-side>
 
 
     </div>
     <div  *ngIf="!isActive" class="containerForInfoAndForm col-3 ">
 
-      <app-problemform></app-problemform>
+      <app-problemform ></app-problemform>
 
     </div>
     <div id="containerForMap" class="col-9 " >
