--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
   flex-direction: column;
   align-content: stretch;
   align-items: stretch;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 app-root {
