--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,22 +1,50 @@
-label {
-  padding-left: 25px;
-  padding-right: 25px;
+/*label {*/
+  /*padding-left: 25px;*/
+  /*padding-right: 25px;*/
+/*}*/
+/*.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > .active > a:hover {*/
+  /*color: #fff;*/
+  /*background-color: #464646;*/
+/*}*/
+/*#kopce {*/
+  /*padding: 4px;*/
+  /*border-style: solid;*/
+  /*border-color: white;*/
+  /*border-width: 1.5px;*/
+  /*border-radius: 6px;*/
+/*}*/
+.navbar {
+  padding-top: 0;
+  padding-bottom: 0;
+
+}
+.nav{
+  padding: 0;
+  margin: 0;
+  height: 54px;
+
 }
 
 .navbar-inverse .navbar-nav > li > a {
   font-weight: bold;
 }
 
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > .active > a:hover {
-  color: #fff;
+.nav-item{
+  padding-top: 8px;
+}
+
+.nav-item a{
+  padding: 0;
+  color: white;
+  margin: 2px 30px;
+  font-size: 20px;
+}
+
+.nav-item:hover{
   background-color: #464646;
 }
 
-#kopce {
-  padding: 8px;
-  border-style: solid;
-  border-color: white;
-  border-width: 1.5px;
-  border-radius: 6px;
-}
 
+ul{
+  margin-top: 1px;
+}
