--- a/src/app/components/events/event-form/event-form.component.html
+++ b/src/app/components/events/event-form/event-form.component.html
@@ -1,19 +1,19 @@
-<h1>Додади елемент</h1>
-<label>Име:</label><input [(ngModel)]="addEvent.name"><br>
-<label>Локација: </label><input [(ngModel)]="addEvent.location"><br>
-<label>Слика: </label>
+<div class="container">
+  <h1>Додади елемент</h1>
+  <div class="form-group" >
 
 
-<input
-  style="display: none"
-  type="file" (change)="onFileChanged($event)"
-  #fileInput>
-<button (click)="fileInput.click()">Select File</button>
-<button (click)="onUpload()">Upload!</button>
 
-<br>
-<label>Датум: </label><input [(ngModel)]="addEvent.date"><br>
-<label>Време: </label><input [(ngModel)]="addEvent.time"><br>
-<label>Опис: </label><input [(ngModel)]="addEvent.description"><br>
-<button (click)="addNewEvent(addEvent)"  routerLink="/events" >Додади настан</button>
+    <label>Име </label><input class="form-control" [(ngModel)]="addEvent.name"><br>
+    <label>Локација </label><input class="form-control" [(ngModel)]="addEvent.location"><br>
 
+    <label>Датум </label><input class="form-control" [(ngModel)]="addEvent.date"><br>
+    <label>Време </label><input class="form-control"[(ngModel)]="addEvent.time"><br>
+    <label>Опис </label><textarea class="form-control" [(ngModel)]="addEvent.description"></textarea><br>
+    <label>Слика </label><input type="file" (change)="onFileChanged($event)" ><br>
+    <button (click)="addNewEvent(addEvent)"  routerLink="/events" class="btn btn-block btn-lg">Додади настан</button>
+  </div>
+
+
+
+</div>
