--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -18,9 +18,10 @@
         <div class="card flex-container" >
           <img class="card-img-top img-fluid" src="{{event.image}}" alt="Card image cap">
           <div class="card-body" style="align-content: center">
-            <h4 class="card-title">{{event.name}}</h4>
-            <p class="card-text">Датум: {{event.date}}</p>
-            <p class="card-text">Време: {{event.time}}</p>
+            <h4 class="card-title d-flex justify-content-center">{{event.name}}</h4>
+            <p class="card-text d-flex justify-content-center">Датум: {{event.date}}</p>
+            <p class="card-text d-flex justify-content-center">Време: {{event.time}}</p>
+            <p class="card-text d-flex justify-content-center">Локација: {{event.location}}</p>
             <p class="card-text">{{event.description}}</p>
 
 
