--- a/src/app/components/modal-basic/modal-basic.component.css
+++ b/src/app/components/modal-basic/modal-basic.component.css
@@ -1,11 +1,26 @@
 .container-modal{
     background-color: white;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    width: 550px;
+    height: auto;
+    justify-content: center;
+    padding: 15px;
 }
 
-#content{
-  width: 80%;
-}
+/*.modal-header .modal-body{*/
+    /*justify-content: center;*/
+/*}*/
 
+.modal-body .modal-title{
+  margin-left: 30%;
+  margin-bottom: 40px;
+  margin-top: 20px;
+  font-weight: bold;
+  color: #464646;
+}
 #email{
     border: none;
     margin-left: 10px;
@@ -27,7 +42,9 @@
     color: white;
 
 }
-
+.btn{
+  font-size: 20px;
+}
 #signInButton a{
   font-size: 20px;
 }
@@ -36,6 +53,40 @@
   border-bottom:  #464646;
 }
 
-.button-login{
-  width: 300px;
+.fb-logo{
+  margin-right: 30px;
+}
+
+.signIn{
+  margin-left: 1em;
+  color: #17a2b8;
+}
+
+.container-login{
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 40px;
+  margin-right: 30px;
+  width: 80%;
+}
+
+.container-login p{
+  display: flex;
+  justify-content: center;
+}
+
+.icons-media{
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: grid;
+  justify-content: center;
+}
+.icons-media small{
+  padding-left: 10px;
+}
+
+.register{
+  display: flex;
+  justify-content: center;
 }
