--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -8,7 +8,7 @@
     </div>
     <div  *ngIf="!isActive" class="containerForInfoAndForm col-3 ">
 
-      <app-problemform ></app-problemform>
+      <app-problemform (someEvent)="onRefresh()"></app-problemform>
 
     </div>
     <div id="containerForMap" class="col-9 " >
@@ -18,10 +18,11 @@
         <agm-marker [(latitude)]="location.marker.lat" [(longitude)]="location.marker.lng"
                     [markerDraggable]="location.marker.draggable" (dragEnd)='markerDragEnd($event)'></agm-marker>
 
-        <div *ngIf="problemsLocations!=null">
+        <div *ngIf="problemsLocations!==null" >
+          {{console.log("i'm entering here")}}
           <agm-circle *ngFor="let circle of problemsLocations" [latitude]="circle.lat" [longitude]="circle.lng"
                       [(radius)]="circleRadius"
-                      [fillColor]="'pink'"
+                      [fillColor]="'red'"
                       [circleDraggable]="false"
                       [editable]="false" (circleClick)="onPrint($event)">
 
