Changes in Navbar, logo added

--- a/src/app/components/info-side/info-side.component.css
+++ b/src/app/components/info-side/info-side.component.css
@@ -1,10 +1,13 @@
 .card{
-  padding: 15px;
+  padding: 12px;
   height: 100vh;
   display: flex;
 }
 .card-body{
-  padding: 10px;
+  padding: 8px;
+}
+.blockquote{
+  margin-bottom: 0;
 }
 
 .icons{
@@ -13,7 +16,7 @@
   border-radius: 50%;
 }
 .row{
-  margin-top: 20px;
+  margin-top: 15px;
 }
 .col{
   margin-top: 10px;
@@ -60,8 +63,12 @@ h6 {
   justify-content: center;
   margin-left: 25%;
   margin-bottom: 30px;
+
 }
 
+.button-problem-size{
+  font-size: 20px;
+}
 
 .items-problems{
 
