--- a/src/app/components/info-side/info-side.component.html
+++ b/src/app/components/info-side/info-side.component.html
@@ -48,9 +48,9 @@
     </div>
     <div class="row">
       <div class="col button-problem">
-        <div class="btn btn-danger text-light p-3 shadow" (click)="someEvent.emit(true)">
+        <button class="btn btn-danger text-light p-3 shadow button-problem-size" (click)="someEvent.emit(true)">
           Додај Проблем
-        </div>
+        </button>
       </div>
     </div>
   </div>
