--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,9 +1,13 @@
 <div id="wrapper" class="animate">
   <nav class="navbar header-top fixed-top navbar-expand-lg  navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"><img src="../../../assets/Icons/logo.png"></a>
 
-<button class="navbar-toggler" type="button">
-  <span class="navbar-toggler-icon"></span>
-</button>
+    <button class="navbar-toggler" type="button">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+      <!--<span class="navbar-toggler-icon"></span>-->
+    <!--</button>-->
 
 
   <div class="nav navbar-collapse collapse w-100 order-3 dual-collapse2">
@@ -20,7 +24,7 @@
       <li class="nav-item">
         <a routerLink="/events" class="nav-link" href="#">Настани</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" style="padding: 0;">
           <app-modal-basic></app-modal-basic>
       </li>
     </ul>
