--- a/src/app/components/events/event-form/event-form.component.css
+++ b/src/app/components/events/event-form/event-form.component.css
@@ -2,14 +2,25 @@
   width: 50%;
   display: flex;
   flex-direction: column;
+  justify-items: center;
+
 }
 .container h1{
-  margin-top: 40px;
-  margin-bottom: 50px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  width: 80%;
 }
 
 .form-group{
   width: 80%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+input{
+  margin-bottom: 10px;
 }
 
 .buttonAddEvent{
@@ -18,5 +29,10 @@
 }
 
 .uploadPic{
-  margin-left: 10px;
+  margin-left: 20px;
+}
+.container-files{
+  margin-top: 20px;
+  display: flex;
+
 }
