--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -1,10 +1,7 @@
-
-
 <div class="container">
-
   <div class="events-title">
     <h1>Листа на настани</h1>
-    <button class="btn btn-info float-right" routerLink="/events/add">Додади настан</button>
+    <button class="btn btn-md btn-info " routerLink="/events/add">Додади настан</button>
   </div>
 
   <div class="card-columns">
