--- a/src/app/components/problemform/problemform.component.html
+++ b/src/app/components/problemform/problemform.component.html
@@ -10,12 +10,22 @@
           <label for="description"></label>
           <textarea id="description" class="form-control" required="required" rows="4" placeholder="Пр. Опис на проблемот" [(ngModel)]="currentProblem.description"></textarea>
         </div>
-        <label>Слика </label><input type="file" (change)="onFileChanged($event)" ><br>
+      <div class="container-files">
+        <label>Прикачи слика</label><input type="file" (change)="onFileChanged($event)" class="uploadPic" required>
+      </div>
+        <!--<label>Слика </label><input type="file" (change)="onFileChanged($event)" class="uploadPic"><br>-->
           <p>Локација (движете го црвенот пин на мапата)</p>
           <!--<input type="text" id="locationMarker" [value]="currentLocation">-->
-          <label for="listOfItems">Листа на потребни работи(ставките одделете ги со запирка)</label>
-          <input type="text" id="listOfItems" required="required"  [(ngModel)]="this.listItems">
-          <label for="privateInfo"><input type="checkbox" required="required" id="privateInfo" [(ngModel)]="currentProblem.privacy">Дали се согласувате Вашите внесени податоци, да бидат објавени</label>
-          <button type="submit" class="btn btn-danger text-light button-problem" (click)="onAddProblemClicked()" > Додај проблем </button>
+          <label for="listOfItems">Листа на потребни работи (ставките одделете ги со запирка)</label>
+          <textarea class="form-control" type="text" id="listOfItems" required="required"  [(ngModel)]="this.listItems"></textarea>
+          <label for="privateInfo"><input type="checkbox" class="infoApproval" required="required" id="privateInfo" [(ngModel)]="currentProblem.privacy">  Дали се согласувате Вашите внесени податоци, да бидат објавени</label>
+        <!--<button type="submit" class="btn btn-danger text-light button-problem" (click)="onAddProblemClicked()" > Додај проблем </button>-->
+        <div class="row">
+          <div class="col button-problem">
+            <button class="btn btn-danger text-light p-3 shadow button-problem-size" (click)="onAddProblemClicked()" >
+              Додај Проблем
+            </button>
+          </div>
+        </div>
     </div>
 </div>
