--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -13,16 +13,16 @@
   <div class="nav navbar-collapse collapse w-100 order-3 dual-collapse2">
     <ul class="nav navbar-nav ml-auto">
       <li class="nav-item">
-        <a  routerLink="/home" class="nav-link" href="#">Почетна</a>
+        <a  routerLink="/home" class="nav-link" >Почетна</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/detect" class="nav-link" href="#">Детектирај</a>
+        <a routerLink="/detect" class="nav-link" >Детектирај</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/heroes" class="nav-link" href="#">Херој</a>
+        <a routerLink="/heroes" class="nav-link" >Херој</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/events" class="nav-link" href="#">Настани</a>
+        <a routerLink="/events" class="nav-link" >Настани</a>
       </li>
       <li class="nav-item" style="padding: 0;">
           <app-modal-basic></app-modal-basic>
